--- a/vat/values.yaml
+++ b/vat/values.yaml
@@ -1,8 +1,9 @@
+versionTag: v0.1
+
 api:
   replicaCount: 1
   image:
     repository: docker.io/danijels/cg-vat-api
-    tag: v0.1
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
