--- a/distr/templates/configmap.yaml
+++ b/distr/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.database.initScriptConfigMap }}
+  name: {{ .Release.Name }}-{{ .Values.database.initScriptConfigMap }}
 data:
   init.sql: |
     CREATE TABLE IF NOT EXISTS distributors (
