--- a/distr/values.yaml
+++ b/distr/values.yaml
@@ -32,7 +32,7 @@ database:
       memory: 256Mi
   rootPassword: password
   databaseName: distributors
-  initScriptConfigMap: init-script
+  initScriptConfigMap: init-cg
 
 service:
   apiPort: 8080
