--- a/vat/values.yaml
+++ b/vat/values.yaml
@@ -23,5 +23,5 @@ database:
       cpu: 250m
       memory: 256Mi
   rootPassword: password
-  databaseName: distributors
+  databaseName: categories
   initScriptConfigMap: init-cg
