--- a/vat/templates/deployment.yaml
+++ b/vat/templates/deployment.yaml
@@ -23,10 +23,12 @@ spec:
           imagePullPolicy: {{ .Values.api.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.api.service.port }}
               protocol: TCP
           env:
             - name: DB_HOST
+              value: "{{ .Release.Name }}-dbsvc"
+            - name: PORT
               value: "{{ .Release.Name }}-dbsvc"
             - name: DB_USER
               value: root
