--- a/vat/templates/deployment.yaml
+++ b/vat/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - name: DB_HOST
               value: "{{ .Release.Name }}-dbsvc"
             - name: PORT
-              value: "{{ .Release.Name }}-dbsvc"
+              value: {{ .Values.api.service.port }}
             - name: DB_USER
               value: root
             - name: DB_PASSWORD
