--- a/bff/templates/service.yaml
+++ b/bff/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "article-api.fullname" . }}
+  name: {{ .Release.Name }}-svc
   labels:
-    {{- include "article-api.labels" . | nindent 4 }}
+    app: {{ .Release.Name }}svc
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "article-api.selectorLabels" . | nindent 4 }}
+    app: {{ .Release.Name }}
