--- a/bff/values.yaml
+++ b/bff/values.yaml
@@ -22,6 +22,6 @@ resources:
 
 # External API URLs
 externalApis:
-  productApi: "http://product-api"
-  distrApi: "http://distr-api"
-  vatApi: "http://vat-api"
+  productApi: "http://prod-svc:8080"
+  distrApi: "http://distr-svc:8080"
+  vatApi: "http://vat-svc:8080"
