--- a/products/templates/product-db-deployment.yaml
+++ b/products/templates/product-db-deployment.yaml
@@ -37,3 +37,10 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
+          volumeMounts:
+          - name: init-script
+            mountPath: /docker-entrypoint-initdb.d
+      volumes:
+      - name: init-script
+        configMap:
+          name: {{ .Release.Name }}-{{ .Values.database.initScriptConfigMap }}
