--- a/bff/templates/virtualservice.yaml
+++ b/bff/templates/virtualservice.yaml
@@ -16,27 +16,9 @@ spec:
       headers:
         response:
           set:
-            gateway: "true"
-    match:
-    - uri:
-        exact: /bff
-    headers:
-      request:
-        set:
-          Content-Type: "application/json"
-    rewrite:
-      uri: "/"
-  - route:
-    - destination:
-        host: {{ .Release.Name }}-svc
-        port:
-          number: {{ .Values.service.port }}
-      headers:
-        response:
-          set:
             X-Api: "true"
     match:
     - uri:
         prefix: /api
     rewrite:
-      uri: "/"
+      uri: "/bff"
