--- a/bff/templates/deployment.yaml
+++ b/bff/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ .Release.Name }}
   labels:
     app: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
