--- a/products/templates/product-api-deployment.yaml
+++ b/products/templates/product-api-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}api
     release: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   {{- if not .Values.api.autoscaling.enabled }}
   replicas: {{ .Values.api.replicas }}
