--- a/products/templates/product-api-hpa.yaml
+++ b/products/templates/product-api-hpa.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}api
     release: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
