--- a/products/templates/product-db-deployment.yaml
+++ b/products/templates/product-db-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}db
     release: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   replicas: {{ .Values.database.replicas }}
   selector:
