--- a/vat/templates/deployment.yaml
+++ b/vat/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}api
     release: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   replicas: {{ .Values.api.replicaCount }}
   selector:
