--- a/vat/templates/service.yaml
+++ b/vat/templates/service.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}svc
     release: {{ .Release.Name }}
+    version: {{ .Values.versionTag }}
 spec:
   type: {{ .Values.api.service.type }}
   ports:
