--- a/products/templates/product-api-deployment.yaml
+++ b/products/templates/product-api-deployment.yaml
@@ -46,5 +46,7 @@ spec:
             value: "update"
           - name: SPRING_JPA_SHOW_SQL
             value: "true"
+          - name: VAT_API_BASE_URL
+            value: {{ .Values.api.vatApi }}
           resources:
             {{- toYaml .Values.api.resources | nindent 12 }}
