--- a/products/values.yaml
+++ b/products/values.yaml
@@ -1,6 +1,7 @@
 versionTag: v0.6
 
 api:
+  vatApi: "http://vat-svc:8080"
   image:
     repository: docker.io/danijels/cg-product-api
   replicas: 2
@@ -17,7 +18,7 @@ api:
     maxReplicas: 6
     targetCPUUtilizationPercentage: 80
     targetMemoryUtilizationPercentage: 80
-      
+
 database:
   image:
     repository: mysql
