--- a/bff/templates/deployment.yaml
+++ b/bff/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: {{ .Release.Name }}
+        version: {{ .Values.versionTag }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
