--- a/ui/templates/deployment.yaml
+++ b/ui/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             protocol: TCP
           env:
           - name: API_BASE_URL
-            value: {{ .Values.apiBaseUrl }}/{{ .Release.Namespace }}
+            value: {{ .Values.apiBaseUrl }}
           readinessProbe:
             httpGet:
               path: /
