--- a/ui/templates/deployment.yaml
+++ b/ui/templates/deployment.yaml
@@ -35,3 +35,5 @@ spec:
             httpGet:
               path: /
               port: http
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
