--- a/products/templates/product-api-deployment.yaml
+++ b/products/templates/product-api-deployment.yaml
@@ -50,4 +50,4 @@ spec:
           - name: VAT_API_BASE_URL
             value: {{ .Values.api.vatApi }}
           resources:
-            {{- toYaml .Values.api.resources | nindent 12 }}
+            {{- toYaml .Values.resources | nindent 12 }}
