--- a/bff/values.yaml
+++ b/bff/values.yaml
@@ -22,5 +22,5 @@ resources:
 
 # External API URLs
 externalApis:
-  productApi: "http://prodapp-svc:8080"
-  distrApi: "http://distrapp-svc:8080"
+  productApi: "http://prod-svc:8080"
+  distrApi: "http://distr-svc:8080"
