--- a/distr/templates/services.yaml
+++ b/distr/templates/services.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-svc
+  name: distr-svc
   labels:
     app: {{ .Release.Name }}svc
     release: {{ .Release.Name }}
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-dbsvc
+  name: distrdb-svc
   labels:
     app: {{ .Release.Name }}dbsvc
     release: {{ .Release.Name }}
