--- a/vat/templates/service.yaml
+++ b/vat/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-svc
+  name: vat-svc
   labels:
     app: {{ .Release.Name }}svc
     release: {{ .Release.Name }}
@@ -20,7 +20,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-dbsvc
+  name: vatdb-svc
   labels:
     app: {{ .Release.Name }}dbsvc
     release: {{ .Release.Name }}
