--- a/distr/templates/distr-api-deployment.yaml
+++ b/distr/templates/distr-api-deployment.yaml
@@ -24,7 +24,7 @@ spec:
       initContainers:
         - name: wait-for-db
           image: busybox
-          command: ['sh', '-c', 'until nc -z distrdb-svc:{{ .Values.service.dbPort }}; do echo waiting for db; sleep 2; done;']
+          command: ['sh', '-c', 'until nc -z distrdb-svc {{ .Values.service.dbPort }}; do echo waiting for db; sleep 2; done;']
       containers:
         - name: api
           image: "{{ .Values.api.image.repository }}:{{ .Values.versionTag }}"
