--- a/products/templates/services.yaml
+++ b/products/templates/services.yaml
@@ -10,7 +10,7 @@ spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.service.apiPort }}
-      targetPort: {{ .Values.service.apiPort }}
+      targetPort: {{ .Values.service.containerPort }}
       protocol: TCP
       name: http
   selector:
