--- a/bff/Chart.yaml
+++ b/bff/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: article-api
-description: A Helm chart for the Article API
+name: bff-api
+description: Helm chart for the BFF API
 version: 0.1.0
 appVersion: "1.0.0"
